포스트 업데이트

--- a/src/app/blog/2024/09/일렉트론앱을 만들며.md
+++ b/src/app/blog/2024/09/일렉트론앱을 만들며.md
@@ -9,11 +9,11 @@ tags: [리액트,일렉트론,한계]
 ## 내용
 작년 11월경 부터 시작한 <a href="https://github.com/RedPeanut/crossterm" target="_blank">터미널 앱</a> 을 만들면서 느낀점, 배운점에 대해서 적어본다.
 
-- 일렉트론+리액트 조합으로 시작 하였다. 그러나 장장 8개월 가량 지난 시점 리액트가 품고 있는 근원적인 문제점 때문에, 프로젝트를 다시 처음 부터 시작하고 있다. 리액트로는 내부 컴포넌트의 재생성 없이 컴포넌트를 이동 할 수가 없는 것으로 보인다. 잡아놓은 레이아웃에 대한 조작만 가능하지 컴포넌트 이동에 의한 레이아웃 변경시 컴포넌트 재생성 동작 때문에 컴포넌트 내부 내용이 사라지는 현상은 어찌할 방법이 안보인다. 이러한 한계점에 대한 논의 글도 없는것 같다.
+- 일렉트론+리액트 조합으로 시작 하였다. 그러나 장장 8개월 가량 지난 시점 리액트가 품고 있는 근원적인 문제점 때문에, 프로젝트를 다시 처음 부터 시작하고 있다. 리액트로는 컴포넌트의 재생성 없이는 컴포넌트를 이동 할 수가 없는 것으로 보인다. 잡아놓은 레이아웃에 대한 조작만 가능하지 컴포넌트 이동에 의한 레이아웃 변경시 컴포넌트 재생성 동작 때문에 컴포넌트 내부 내용이 사라지는 현상은 어찌할 방법이 안보인다. 이러한 한계점에 대한 논의 글도 없는것 같다.
 
-- 내가 생각하는 의구심은 이러한 한계점에 대한 소요가 없는가 하는 점이다. 웹 같은 경우 맞닥뜨리기 힘든 케이스 이지만 앱 같은 경우는 충분히 가능한 케이스라 생각되는데 어쩌면 현재 리액트 베이스 오픈소스 생태계의 한계로 생각되기도 한다.
+- 내가 생각하는 의구심은 이러한 한계에 대한 소요가 없는가 하는 점이다. 웹 같은 경우 맞닥뜨리기 힘든 케이스 이지만 앱 같은 경우는 충분히 가능한 케이스라 생각되는데 어쩌면 현재 리액트 오픈소스 생태계의 한계로 생각되기도 한다.
 
-- 리액트를 버림으로써 Toy 프로젝트를 통해 회사 업무에 깊이를 더할 수 있는 여지가 사라진다는 점은 아쉽지만 어쩔수 없을 것 같다. 유지해 보려는 이 이상의 노력은 시간 낭비 같다.
+- 리액트를 버림으로써 토이 프로젝트를 통해 회사 업무에 깊이를 더할 수 있는 여지가 사라진다는 점은 아쉽지만 어쩔수 없을 것 같다. 유지해 보려는 이 이상의 노력은 시간 낭비 같다.
 
 - 새로 시작하고 있다 (<a href="https://github.com/RedPeanut/crossterm2" target="_blank">crossterm2</a>)
 
